--- a/pages/PrevFoorbar/foobar7.html
+++ b/pages/PrevFoorbar/foobar7.html
@@ -36,63 +36,43 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Events
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical
-                                    Events</a>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical Events</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="/event.html?event=breakthequery">Break the
-                                            query</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=codeathon">Codeathon</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=illustra">Illustra</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=aihackathon">AI Hackathon</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="/event.html?event=ideathon">Ideathon</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=gamedevelopment">KB Games</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=cssbattle">CSS Battle</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=techquiz">Tech Quiz</a></li>
-                                    <li><a class="dropdown-item" href="/event.html?event=webally">Webally</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=connectathon">Connectathon</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=codeathon">Photography</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid Insights</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=codexcite">Code Xcite</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=gameverse">Game Verse</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">Web Canvas</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical
-                                Events</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/event.html?event=openmic">Open Mic</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/event.html?event=aceclutch">Ace Clutch</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/event.html?event=blindtyping">Blind Typing</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/event.html?event=flixnmanga">Flix n Manga</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/event.html?event=imagebrush">Image Brush</a></li>
-                                <li><a class="dropdown-item" href="/event.html?event=acciolanocien">Accio La Nocien</a></li>
 
-                            </ul>
-                        </li>
-                        <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Workshop</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="/event.html?event=webdevworkshop">Web
-                                        Development</a></li>
-                                <li><a class="dropdown-item" href="/event.html?event=gamedevworkshop">Game
-                                        Development</a></li>
-                                <li><a class="dropdown-item" href="/event.html?event=javaworkshop">Java
-                                        Programmig</a></li>
-                                <li><a class="dropdown-item" href="/event.html?event=cworkshop">C Programming</a>
-                                </li>
-                                <li><a class="dropdown-item" href="/event.html?event=researchworkshop">Research</a>
-                                </li>
-                            </ul>
-                        </li>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical Events</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="event.html?event=adzap">AD ZAP</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=enigmaquest">Enigma Quest</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=aceclutch">Ace Clutch</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Workshop</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="event.html?event=webdevworkshop">Web Development</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=gamedevworkshop">Game Development</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=javaworkshop">Java Programmig</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=cworkshop">C Programming</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=researchworkshop">Research</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
-
-                    
                     <li class="nav-item">
                         <a href="../../index.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Home Page</a>
                     </li>
@@ -101,19 +81,12 @@
         </div>
     </nav>
 
-
-
-
-
     <section class="section" id="about">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col pr-md-5 mb-4 mb-md-0">
                     <h6 class="section-title mb-0">Foobar 7.0</h6>
-                    <h6 class="section-subtitle mb-4">Redifing Normalcy</h6>
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate molestiae temporibus et
-                        tenetur unde quasi, cum nemo quo, molestias architecto alias voluptatibus corrupti corporis
-                        earum. Necessitatibus maxime modi ipsam, quod!</p> -->
+                    <h6 class="section-subtitle mb-4">Finesse Among the Finest</h6>
                         <div class="w-100 align-items-center dispflex mt-3">
                             <iframe src="https://drive.google.com/file/d/1VbgtzFcUoqRyRWcQywFemIVtXluQX19G/preview" class="videodiv" allow="autoplay"></iframe>
     
@@ -123,16 +96,6 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
     <section id="contact" class="section has-img-bg pb-0">
         <div class="container">
             <div class="row align-items-center">
@@ -141,13 +104,7 @@
                     <div class="dflex">
                         <i class="fa-brands fa-square-whatsapp"></i>
                         <a class="contactlink" href="https://wa.me/7043498279">
-                            <p class="mb-0">+91 7043498279</p>
-                        </a>
-                    </div>
-                    <div class="dflex">
-                        <i class="fa-brands fa-square-whatsapp"></i>
-                        <a class="contactlink" href="https://wa.me/8547520864">
-                            <p class="mb-0">+91 8547520864</p>
+                            <p class="mb-0">+91 9777258131</p>
                         </a>
                     </div>
                     <h6 class="mbspl">Email</h6>
@@ -160,8 +117,8 @@
                     <div class="dflex">
                         <i class="fa-solid fa-envelope"></i>
                         <a class="contactlink"
-                            href="mailto:jaison.j@btech.christuniversity.in?subject=Foobar-Query&body=Message">
-                            <p class="mb-0">jaison.j@btech.christuniversity.in</p>
+                            href="mailto:satyam.rao@btech.christuniversity.in?subject=Foobar-Query&body=Message">
+                            <p class="mb-0">satyam.rao@btech.christuniversity.in</p>
                         </a>
                     </div>
                     <p></p>
@@ -171,19 +128,19 @@
                         <h4 class="mb-4">Drop us a Line</h4>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
-                                <input type="text" class="form-control text-white rounded-0 bg-transparent" name="name"
+                                <input required type="text" class="form-control text-white rounded-0 bg-transparent" name="name"
                                     placeholder="Name">
                             </div>
                             <div class="form-group col-sm-4">
-                                <input type="email" class="form-control text-white rounded-0 bg-transparent"
+                                <input required type="email" class="form-control text-white rounded-0 bg-transparent"
                                     name="Email" placeholder="Email">
                             </div>
                             <div class="form-group col-sm-4">
-                                <input type="text" class="form-control text-white rounded-0 bg-transparent"
+                                <input required type="text" class="form-control text-white rounded-0 bg-transparent"
                                     name="subject" placeholder="Subject">
                             </div>
                             <div class="form-group col-12">
-                                <textarea name="message" id="" cols="30" rows="4"
+                                <textarea required name="message" id="" cols="30" rows="4"
                                     class="form-control text-white rounded-0 bg-transparent"
                                     placeholder="Message"></textarea>
 
@@ -197,10 +154,10 @@
             </div>
             <!-- Page Footer -->
             <footer class="mt-5 py-4 border-top border-secondary">
-                <!-- <p class="mb-0 small">&copy;
-                    <script>document.write(new Date().getFullYear())</script>, LeadMark Created By <a
-                        href="https://www.devcrud.com" target="_blank">DevCrud.</a> All rights reserved
-                </p> -->
+                <p class="mb-0 small">&copy;
+                    <script>document.write(new Date().getFullYear())</script>, Created By <a
+                        href="https://www.devcrud.com" target="_blank">ASCII.</a> All rights reserved
+                </p>
             </footer>
             <!-- End of Page Footer -->
         </div>
