--- a/event.html
+++ b/event.html
@@ -43,33 +43,40 @@
                             Events
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical Events</a>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical
+                                    Events</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="event.html?event=connectxpo">ConnectXpo</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=portfoliobuild">Portfolio-Building</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid Insights</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=pixelscript">PixelScript</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid
+                                            Insights</a></li>
                                     <li><a class="dropdown-item" href="event.html?event=codexcite">CodeXcite</a></li>
                                     <li><a class="dropdown-item" href="event.html?event=gameverse">GameVerse</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">Web Canvas</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical Events</a>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical
+                                    Events</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="event.html?event=adzap">AD-ZAP</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=enigmaquest">Enigma Quest</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a>
+                                    </li>
                                     <li><a class="dropdown-item" href="event.html?event=aceclutch">Ace Clutch</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">WebCanvas</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Workshop</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=webdevworkshop">Web Development</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=gamedevworkshop">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=javaworkshop">Java Programmig</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=cworkshop">C Programming</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=researchworkshop">Research</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=llmworkshop">LLM Workshop</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=dataworkshop">Data Engines
+                                            Workshop</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=gfb">Good First Bug</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -145,25 +152,20 @@
             </div>
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
-                    <div class="row">
-                        <div class="col pr-md-5 mb-4 mb-md-0 infocard">
-                            <h5 id="eventPlanAction" class="mb-2">Action plan</h5>
-                            <p id="eventactionplan" class="taj"></p>
-                        </div>
-                    </div>
                     <div id="eventRule" class="row mt-3">
                         <div class="col pr-md-5 mb-4 mb-md-0 infocard">
-                            <h5 class="mb-2">Rules</h5>
+                            <h5 class="mb-2">Rules & Regulations</h5>
                             <ol id="eventrules">
 
                             </ol>
                             <div id="downloadBtn" class="row mt-3">
-                                <a href="https://firebasestorage.googleapis.com/v0/b/foobar-analytics.appspot.com/o/PPT_tamplate_for_Ideathon.pptx?alt=media&token=e858e0bd-fb19-478e-9ae5-d9892294ec00">
-                                <div class="dowBtn">
-                                    <h6 class="mb-0 ">Download Materials</h6>
-                                    <i class="fa-solid fa-download"></i>
-                                </div>
-                            </a>
+                                <a
+                                    href="https://firebasestorage.googleapis.com/v0/b/foobar-analytics.appspot.com/o/PPT_tamplate_for_Ideathon.pptx?alt=media&token=e858e0bd-fb19-478e-9ae5-d9892294ec00">
+                                    <div class="dowBtn">
+                                        <h6 class="mb-0 ">Download Materials</h6>
+                                        <i class="fa-solid fa-download"></i>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -180,10 +182,11 @@
                             <a id="eventHeadNumber" class="contactlink">
                                 <h6 id="eventcontactnumber" class="fs-14"></h6>
                             </a>
-                            <a id="eventHeadEmail" class="contactlink" href="mailto:ascii.cufe@gmail.com?subject=Foobar-Query&body=Message">
+                            <a id="eventHeadEmail" class="contactlink"
+                                href="mailto:ascii.cufe@gmail.com?subject=Foobar-Query&body=Message">
                                 <h6 id="eventcontactemail" class="fs-14"></h6>
                             </a>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -223,8 +226,8 @@
                         <h4 class="mb-4">Drop us a Line</h4>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
-                                <input required type="text" class="form-control text-white rounded-0 bg-transparent" name="name"
-                                    placeholder="Name">
+                                <input required type="text" class="form-control text-white rounded-0 bg-transparent"
+                                    name="name" placeholder="Name">
                             </div>
                             <div class="form-group col-sm-4">
                                 <input required type="email" class="form-control text-white rounded-0 bg-transparent"
@@ -251,12 +254,43 @@
             <footer class="mt-5 py-4 border-top border-secondary">
                 <p class="mb-0 small">&copy;
                     <script>document.write(new Date().getFullYear())</script>, Created By <a
-                        href="https://www.devcrud.com" target="_blank">ASCII.</a> All rights reserved
+                        style="color: #ff6e42;">ASCII.</a> All rights reserved
                 </p>
             </footer>
             <!-- End of Page Footer -->
         </div>
     </section>
+
+    <div class="wrapper">
+        <ul>
+            <li class="linkedin">
+                <a href="https://www.linkedin.com/company/ascii-cse/" target="_blank">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>linkedin</p>
+                    </div>
+                </a>
+            </li>
+
+            <li class="instagram">
+                <a href="https://www.instagram.com/ascii.christ?igsh=MTJjdHA3Ym1xMW9uYg==" target="_blank">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>instagram</p>
+                    </div>
+                </a>
+            </li>
+
+            <li class="whatsapp">
+                <a href="https://wa.me/7043498279" target="_blank">
+                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>whatsapp</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
