--- a/pages/PrevFoorbar/foobar7.html
+++ b/pages/PrevFoorbar/foobar7.html
@@ -42,33 +42,40 @@
                             Events
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical Events</a>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical
+                                    Events</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=connectathon">Connectathon</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=codeathon">Photography</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid Insights</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=codexcite">Code Xcite</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=gameverse">Game Verse</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">Web Canvas</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=connectxpo">ConnectXpo</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=pixelscript">PixelScript</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid
+                                            Insights</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=codexcite">CodeXcite</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=gameverse">GameVerse</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical Events</a>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical
+                                    Events</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=adzap">AD ZAP</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=enigmaquest">Enigma Quest</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=adzap">AD-ZAP</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a>
+                                    </li>
                                     <li><a class="dropdown-item" href="event.html?event=aceclutch">Ace Clutch</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">WebCanvas</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Workshop</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=webdevworkshop">Web Development</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=gamedevworkshop">Game Development</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=javaworkshop">Java Programmig</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=cworkshop">C Programming</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=researchworkshop">Research</a></li>
+                                    <li><a class="dropdown-item" href="event.html?event=llmworkshop">LLM Workshop</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=dataworkshop">Data Engines
+                                            Workshop</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="event.html?event=gfb">Good First Bug</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -87,9 +94,10 @@
                 <div class="col pr-md-5 mb-4 mb-md-0">
                     <h6 class="section-title mb-0">Foobar 7.0</h6>
                     <h6 class="section-subtitle mb-4">Finesse Among the Finest</h6>
-                        <div class="w-100 align-items-center dispflex mt-3">
-                            <iframe src="https://drive.google.com/file/d/1VbgtzFcUoqRyRWcQywFemIVtXluQX19G/preview" class="videodiv" allow="autoplay"></iframe>
-    
+                    <div class="w-100 align-items-center dispflex mt-3">
+                        <iframe src="https://drive.google.com/file/d/1pEQrx9Bu3AJnoyvpyTaPVZ-NgpstLVgf/preview"
+                            class="videodiv" allow="autoplay"></iframe>
+
                     </div>
                 </div>
             </div>
@@ -128,8 +136,8 @@
                         <h4 class="mb-4">Drop us a Line</h4>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
-                                <input required type="text" class="form-control text-white rounded-0 bg-transparent" name="name"
-                                    placeholder="Name">
+                                <input required type="text" class="form-control text-white rounded-0 bg-transparent"
+                                    name="name" placeholder="Name">
                             </div>
                             <div class="form-group col-sm-4">
                                 <input required type="email" class="form-control text-white rounded-0 bg-transparent"
@@ -156,12 +164,43 @@
             <footer class="mt-5 py-4 border-top border-secondary">
                 <p class="mb-0 small">&copy;
                     <script>document.write(new Date().getFullYear())</script>, Created By <a
-                        href="https://www.devcrud.com" target="_blank">ASCII.</a> All rights reserved
+                        style="color: #ff6e42;">ASCII.</a> All rights reserved
                 </p>
             </footer>
             <!-- End of Page Footer -->
         </div>
     </section>
+
+    <div class="wrapper">
+        <ul>
+            <li class="linkedin">
+                <a href="https://www.linkedin.com/company/ascii-cse/" target="_blank">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>linkedin</p>
+                    </div>
+                </a>
+            </li>
+
+            <li class="instagram">
+                <a href="https://www.instagram.com/ascii.christ?igsh=MTJjdHA3Ym1xMW9uYg==" target="_blank">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>instagram</p>
+                    </div>
+                </a>
+            </li>
+
+            <li class="whatsapp">
+                <a href="https://wa.me/7043498279" target="_blank">
+                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                    <div class="slider">
+                        <p>whatsapp</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
 
     <!-- core  -->
     <script src="../../assets/vendors/jquery/jquery-3.4.1.js"></script>
