--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <h1 class="title">FOOBAR 8.0</h1>
                 <i class="fas mt-5 fa-2x fa-circle-notch fa-spin"></i>
-                <video autoplay loop>
+                <video autoplay muted loop>
                     <source src="./assets/imgs/bg2.mp4" type="video/mp4">
                 </video>
             </div>
@@ -126,7 +126,7 @@
             <h1 class="subtitle">ASCII PRESENTS</h1>
 
             <h1 class="title">FOOBAR 8.0</h1>
-            <video autoplay loop>
+            <video autoplay muted loop>
                 <source src="./assets/imgs/bg2.mp4" type="video/mp4">
             </video>
         </div>
@@ -955,7 +955,7 @@
             </footer>
             <!-- End of Page Footer -->
         </div>
-        <video autoplay loop class="bg-video">
+        <video autoplay muted loop class="bg-video">
             <source src="./assets/imgs/bg.mp4" type="video/mp4">
         </video>
     </section>
