fix footer and upgrade quality

--- a/pages/PrevFoorbar/foobar6.html
+++ b/pages/PrevFoorbar/foobar6.html
@@ -34,53 +34,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Events
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Technical
-                                    Events</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=connectxpo">ConnectXpo</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=pixelscript">PixelScript</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="event.html?event=vividinsights">Vivid
-                                            Insights</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=codexcite">CodeXcite</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=gameverse">GameVerse</a></li>
-                                </ul>
-                            </li>
-
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Non Technical
-                                    Events</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="event.html?event=adzap">AD-ZAP</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=bob">Battle of the Brains</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="event.html?event=ensembleecho">Ensemble Echo</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="event.html?event=aceclutch">Ace Clutch</a></li>
-                                    <li><a class="dropdown-item" href="event.html?event=webcanvas">WebCanvas</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Workshop</a>
-                                <ul class="dropdown-menu">
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="event.html?event=llmworkshop">LLM
-                                                Workshop</a>
-                                        </li>
-                                        <li><a class="dropdown-item" href="event.html?event=dataworkshop">Data Engines
-                                                Workshop</a>
-                                        </li>
-                                        <li><a class="dropdown-item" href="event.html?event=gfb">Good First Bug</a>
-                                        </li>
-                                    </ul>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
                     <li class="nav-item">
                         <a href="../../index.html" class="ml-4 nav-link btn btn-primary btn-sm rounded">Home Page</a>
                     </li>
@@ -112,7 +65,7 @@
                     <h6 class="mbspl">Whatsapp</h6>
                     <div class="dflex">
                         <i class="fa-brands fa-square-whatsapp"></i>
-                        <a class="contactlink" href="https://wa.me/7043498279">
+                        <a class="contactlink" href="https://wa.me/7043498279" target="_blank">
                             <p class="mb-0">+91 9777258131</p>
                         </a>
                     </div>
@@ -170,6 +123,9 @@
             </footer>
             <!-- End of Page Footer -->
         </div>
+        <video autoplay muted loop class="bg-video">
+            <source src="../../assets/imgs/bg.mp4" type="video/mp4">
+        </video>
     </section>
 
     <div class="wrapper">
