--- a/event.html
+++ b/event.html
@@ -201,7 +201,7 @@
                     <h6 class="mbspl">Whatsapp</h6>
                     <div class="dflex">
                         <i class="fa-brands fa-square-whatsapp"></i>
-                        <a class="contactlink" href="https://wa.me/7043498279">
+                        <a class="contactlink" href="https://wa.me/7043498279" target="_blank">
                             <p class="mb-0">+91 9777258131</p>
                         </a>
                     </div>
@@ -259,6 +259,9 @@
             </footer>
             <!-- End of Page Footer -->
         </div>
+        <video autoplay muted loop class="bg-video">
+            <source src="./assets/imgs/bg.mp4" type="video/mp4">
+        </video>
     </section>
 
     <div class="wrapper">
