--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <!-- <div class="loader">
+    <div class="loader">
         <header class="header">
             <div class="overlay">
                 <br>
@@ -33,7 +33,7 @@
                 </video>
             </div>
         </header>
-    </div> -->
+    </div>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
