--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="row justify-content-between">
                 <div class="col-md-6 pr-md-5 mb-4 mb-md-0">
                     <h6 class="section-title mb-0">About Foobar</h6>
-                    <h6 class="section-subtitle mb-4">Intra Collage Tech Fest</h6>
+                    <h6 class="section-subtitle mb-4">Intra College Tech Fest</h6>
                     <p class="taj">Foobar is for us, the students of Kengeri Campus to showcase our talents in our
                         technical fields
                         as well as other parallels. Although open to all department students on the Kengeri Campus, it
