Remove social media sliders

--- a/pages/PrevFoorbar/foobar4.html
+++ b/pages/PrevFoorbar/foobar4.html
@@ -66,7 +66,7 @@
                     <div class="dflex">
                         <i class="fa-brands fa-square-whatsapp"></i>
                         <a class="contactlink" href="https://wa.me/9777258131" target="_blank">
-                            <p class="mb-0">+91 9777258131</p>
+                            <p class="mb-0">+91 97772 58131</p>
                         </a>
                     </div>
                     <h6 class="mbspl">Email</h6>
@@ -127,35 +127,6 @@
             <source src="../../assets/imgs/bg.mp4" type="video/mp4">
         </video>
     </section>
-
-    <div class="wrapper">
-        <ul>
-            <li class="linkedin">
-                <a href="https://www.linkedin.com/company/ascii-cse/" target="_blank">
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    <div class="slider">
-                        <p>linkedin</p>
-                    </div>
-                </a>
-            </li>
-
-            <li class="instagram">
-                <a href="https://www.instagram.com/ascii.christ?igsh=MTJjdHA3Ym1xMW9uYg==" target="_blank">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <div class="slider">
-                        <p>instagram</p>
-                    </div>
-                </a>
-            </li>
-
-            <li class="whatsapp">
-                <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                <div class="slider">
-                    <p>whatsapp</p>
-                </div>
-            </li>
-        </ul>
-    </div>
 
     <!-- core  -->
     <script src="../../assets/vendors/jquery/jquery-3.4.1.js"></script>
