--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                                     <h6 class="mt-1 mb-0">Kshitiz Srivastava</h6>
                                 </div>
                             </div>
-                            <p class="text-muted clubname">Club Headr</p>
+                            <p class="text-muted clubname">Club Head</p>
                         </div>
                     </div>
                 </div>
